# regime-forecast-lite

./: .dockerignore  .gitignore  .ruff.toml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  bench_hey.txt  constraints.txt  illustration.md  mypy.ini  pyproject.toml  pyproject.toml.bak  sweep.jsonl
.github/workflows/: ci.yml
artifacts/: metrics_sim.json  readme_metrics.md  service_smoke.json
artifacts/bench/: env.json  summary.json
artifacts/calib/: aapl_1h_logret_calibration.json  btcusd_1h_logret_calibration.json  msft_1h_logret_calibration.json  summary.jsonl
backtest/: cli.py  metrics.py  runner.py  sweep.py
config/: default.yaml  sim.yaml
config/profiles/: default.yaml  market.yaml  sim.yaml
core/: config.py  conformal.py  features.py  pipeline.py  router.py  types.py
core/detect/: bocpd.py
data/: replay.py  sim_cp.py  yahoo_fetch.py
docs/: errors.md
examples/: quickstart.csv
examples/config/: minimal.yaml
grafana/: dashboard.json
models/: arima.py  ewma.py  xgb.py
openapi/: explicit-schemas.json
prometheus/: alerts.yaml
regime_forecast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: baselines_rw_ar1.py  bench_light.sh  bench_service.py  bench_suite.sh  calibration_suite.py  ci_checks.sh  exp_sweep.py  latency_bench.py  plot_backtest.py  plot_baselines.py  plot_market.sh  readme_run.sh  service_smoke.py  summary_readme.py
service/: app.py  middleware.py  schemas.py
state/: latest.json  snapshot-20250820-185919.json
tests/: test_bocpd.py  test_conformal.py  test_eviction_and_nan.py  test_features.py  test_rate_limit.py  test_service_contract.py  test_smoke.py
