[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-forecast-lite"
version = "0.1.0"
description = "Streaming one-step-ahead forecaster with a single model and leakage-safe pipeline (FastAPI service)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Your Name" }
]

keywords = ["time-series", "forecasting", "change-point", "conformal", "online-learning", "fastapi"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]

dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn>=0.30,<1.0",          # no [standard] → no uvloop/httptools
  "pydantic>=2.7,<3.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.5,<2.0",
  "prometheus-client>=0.20,<1.0",# keep tiny metrics
  "PyYAML>=6,<7"                 # only if you truly read a tiny YAML config; otherwise drop it later
]

[project.optional-dependencies]
service = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "prometheus-client>=0.17",
  "httpx>=0.24",
]
plot = ["matplotlib>=3.8"]
market = ["yfinance>=0.2.40"]

dev = [
  "pytest",
  "ruff",
  "mypy",
  "tqdm",
  "pandas",
  "pyarrow",
  # pull in app and plotting extras during dev installs
  "regime-forecast-lite[service,plot,market]",
]


[project.urls]
Homepage = "https://github.com/yourorg/regime-forecast-lite"
Repository = "https://github.com/yourorg/regime-forecast-lite"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scripts*", "examples*", "artifacts*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
